fixed the volume sliders thumb being on the wrong position

--- a/src/plugins/custom-bottom-bar/style.css
+++ b/src/plugins/custom-bottom-bar/style.css
@@ -687,7 +687,7 @@ ytmusic-player-bar .chapter-info,
   cursor: pointer;
   opacity: 0;
   transition: opacity 0.2s ease;
-  margin-left: -4px;
+  margin-left: 5px;
   position: relative;
   z-index: 10;
 }
@@ -714,7 +714,6 @@ ytmusic-player-bar .chapter-info,
   transition: opacity 0.2s ease;
   position: relative;
   z-index: 10;
-  transform: translateX(-4px);
 }
 
 .ytmusic-volume-slider:hover::-moz-range-thumb {
